Prepare database and products-list

--- a/src/app/layout/pages/catalog/catalog.page.html
+++ b/src/app/layout/pages/catalog/catalog.page.html
@@ -11,6 +11,5 @@
     </ion-toolbar>
   </ion-header>
 
-  Content here.
-
+  <hpc-products-list [products]="products"></hpc-products-list>
 </ion-content>
