--- a/src/app/layout/pages/catalog/catalog.page.html
+++ b/src/app/layout/pages/catalog/catalog.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Catalog </ion-title>
+    <ion-title> HPC - Catalog </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Catalog</ion-title>
+      <ion-title size="large">HPC - Catalog</ion-title>
     </ion-toolbar>
   </ion-header>
 
