Prepare product-details page

--- a/src/app/components/products-list/products-list-item/products-list-item.component.html
+++ b/src/app/components/products-list/products-list-item/products-list-item.component.html
@@ -1,6 +1,8 @@
-<ion-item lines="full" [href]="'#'">
+<ion-item lines="full" (click)="onClick($event)">
   <ion-thumbnail slot="start">
     <img [alt]="product.name" [src]="product.image" />
   </ion-thumbnail>
-  <ion-label>{{ product.name }}</ion-label>
+  <ion-label>{{ product.name }}
+    <p>{{ product.manufacturer | manufacturer }}</p>
+  </ion-label>
 </ion-item>
