--- a/src/app/layout/pages/product-details/product-details.page.html
+++ b/src/app/layout/pages/product-details/product-details.page.html
@@ -1,15 +1,15 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> HPC - Catalog </ion-title>
+    <ion-title> HPC - Product details </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">HPC - Catalog</ion-title>
+      <ion-title size="large">HPC - Product details</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <hpc-products-list [products]="products" (productClicked)="onProductClicked($event)"></hpc-products-list>
+  <hpc-product-details [product]="product"></hpc-product-details>
 </ion-content>
